--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
       color: var(--text);
       font-size: 16px;
     }
+
+    /* 헤더: 배경 제거하고 섹션 배경과 동일하게, 로고·아이콘 일렬 배치 */
     header {
-      background: var(--primary);
-      height: 120px;
-      line-height: 120px;
-      text-align: center;
-      position: relative;
+      background: var(--bg);
+      padding: 8px 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     .logo-img {
-      max-height: 100px;   /* 로고 크기를 80px로 키움 */
+      max-height: 80px;  /* 원하는 로고 크기로 조정 */
       width: auto;
-      vertical-align: middle;
     }
     .instagram-link {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 1.2rem;
-      color: #fff;
+      font-size: 1.5rem;
+      color: var(--text);
+      text-decoration: none;
     }
+
     .main-section {
       padding: 8px 16px;
       text-align: center;
@@ -68,10 +68,12 @@
       font-weight: 600;
       text-decoration: none;
       margin-top: 4px;
+      transition: background 0.3s;
     }
     .survey-btn:hover {
       background: #333;
     }
+
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -82,41 +84,25 @@
       color: var(--primary);
       text-decoration: none;
     }
-
-    /* 모바일 전용 (480px 이하) */
-    @media (max-width: 480px) {
-      header {
-        height: 40px;
-        line-height: 40px;
-      }
-      .logo-img {
-        max-height: 35px;  /* 동일하게 80px 유지 */
-      }
-      .instagram-link {
-        top: 10px;
-        right: 10px;
-        font-size: 1.2rem;
-      }
-    }
   </style>
 </head>
 <body>
   <header>
+    <img src="logo.png"
+         alt="EVERYDEAR 로고"
+         class="logo-img">
     <a href="https://www.instagram.com/everydear.official"
        class="instagram-link"
        target="_blank"
        aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    <img src="logo.png"
-         alt="EVERYDEAR 로고"
-         class="logo-img" />
   </header>
 
   <section class="main-section">
     <img src="mobilepage.png"
          alt="서비스 미리보기"
-         class="preview-img" />
+         class="preview-img">
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header"
        target="_blank"
        class="survey-btn">
