--- a/index.html
+++ b/index.html
@@ -37,13 +37,17 @@
       align-items: center;
     }
     .logo-img {
-      max-height: 80px;  /* 원하는 로고 크기로 조정 */
-      width: auto;
+      position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  max-height: 80px; /* 원하는 크기 */
     }
     .instagram-link {
-      font-size: 1.5rem;
-      color: var(--text);
-      text-decoration: none;
+  position: absolute;
+  top: 12px;
+  right: 16px;
+  font-size: 1.5rem;
+  color: var(--text);
     }
 
     .main-section {
