--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
       color: var(--text);
       font-size: 16px;
     }
-    /* 헤더: 로고 왼쪽, 아이콘 오른쪽 */
+
+    /* 헤더: 항상 왼쪽에 로고, 오른쪽에 인스타 아이콘 */
     header {
       background: var(--bg);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 12px 16px;
+      padding: 8px 16px;
     }
     .logo-img {
-      max-height: 80px;  /* 로고 크기 원하는 만큼 조절 */
+      max-height: 80px;  /* 원하시는 만큼 조절 */
       width: auto;
     }
     .instagram-link {
