--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       max-width: 480px;
       height: auto;
       border-radius: 10px;
-      margin: 20px auto;
+      margin: 10px auto;
       display: block;
     }
 
 .last-section {
-  min-height: auto;
+  min-height: 100vh;
   display: block;
   padding: 40px 16px;
   text-align: center;
