--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </section>
   <section class="img-section last-section" data-aos="fade-up">
   <img src="page5.png" alt="5" class="fade-img" />
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">첫 회 무료 체험하기</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">신청하기</a>
 </section>
 
   <footer>
