--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
 
     .img-section {
-  min-height: 100vh;  /* 화면 높이만큼 섹션을 차지함 */
+  min-height: 80%;  /* 화면 높이만큼 섹션을 차지함 */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -65,9 +65,9 @@
     }
 
 .last-section {
-  min-height: 100vh;
+  min-height: 80%;
   display: block;
-  padding: 40px 16px;
+  padding: 0;
   text-align: center;
 }
 
