--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
       text-decoration: none;
     }
 
-    .img-section {
-  min-height: 80%;  /* 화면 높이만큼 섹션을 차지함 */
+ .img-section {
+  padding: 32px 0; /* 상하 여백만 주고 간격 조정 */
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0;
-  margin: 0;
-    }
+}
 
     .fade-img {
       width: 100%;
@@ -65,9 +63,7 @@
     }
 
 .last-section {
-  min-height: 80%;
-  display: block;
-  padding: 0;
+  padding: 32px 0;
   text-align: center;
 }
 
