--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
  .img-section {
   padding: 32px 0; /* 상하 여백만 주고 간격 조정 */
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -63,7 +64,7 @@
     }
 
 .last-section {
-  min_height: 50%;
+  min-height: 50%;
   padding: 32px 0;
   text-align: center;
 }
@@ -77,7 +78,7 @@
   font-size: 1.1rem;
   font-weight: 600;
   text-decoration: none;
-  margin-top: 48px;  /* 이미지와 버튼 사이 여백 */
+  margin-top: 24px;  /* 이미지와 버튼 사이 여백 */
   transition: background 0.3s;
 }
     
