--- a/index.html
+++ b/index.html
@@ -71,21 +71,27 @@
 
 .survey-btn {
   display: inline-block;
-  padding: 14px 32px;
-  background: var(--accent);
-  color: #fff;
-  border-radius: 50px;
-  font-size: 1.1rem;
+  text-transform: uppercase;
   font-weight: 600;
+  font-size: 0.9rem;
+  letter-spacing: 0.1em;
+  color: #fff;
+  padding: 14px 40px;
+  border-radius: 50px;
+  background: linear-gradient(270deg, rgba(78,84,200,0.9), rgba(78,84,200,0.6), rgba(78,84,200,0.3));
+  background-position: 1% 50%;
+  background-size: 300% 300%;
   text-decoration: none;
-  margin-top: 24px;  /* 이미지와 버튼 사이 여백 */
-  transition: background 0.3s;
+  border: 1px solid rgba(78,84,200,0.3);
+  transition: all 0.6s ease-out;
+  margin-top: 24px;
 }
-    
-    .survey-btn:hover {
-      background: #333;
-    }
 
+.survey-btn:hover {
+  color: #fff;
+  background-position: 99% 50%;
+  border: 1px solid transparent;
+}
     footer {
       text-align: center;
       font-size: 0.85rem;
