--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
       height: auto;
       border-radius: 10px;
       margin: 10px auto;
-      display: block;
+      display: block; 
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
     }
 
 .last-section {
