--- a/index.html
+++ b/index.html
@@ -79,19 +79,24 @@
   color: #fff;
   padding: 14px 40px;
   border-radius: 50px;
-  background: linear-gradient(270deg, rgba(78,84,200,0.9), rgba(78,84,200,0.6), rgba(78,84,200,0.3));
-  background-position: 1% 50%;
+  background: linear-gradient(
+    270deg,
+    rgba(78, 84, 200, 0.9),
+    rgba(78, 84, 200, 0.6),
+    rgba(78, 84, 200, 0.3)
+  );
   background-size: 300% 300%;
+  background-position: 1% 50%;
   text-decoration: none;
-  border: 1px solid rgba(78,84,200,0.3);
+  border: 1px solid rgba(78, 84, 200, 0.3);
   transition: all 0.6s ease-out;
   margin-top: 24px;
 }
 
 .survey-btn:hover {
-  color: #fff;
   background-position: 99% 50%;
   border: 1px solid transparent;
+  color: #fff;
 }
     footer {
       text-align: center;
