--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
       text-decoration: none;
     }
 
- .img-section {
-  padding:100%; /* 상하 여백만 주고 간격 조정 */
+.img-section {
+  padding: 32px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-
     .fade-img {
       width: 100%;
       max-width: 480px;
