--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   </header>
 
   <!-- 이미지 섹션들 -->
-  <section class="img-section" data-aos="fade-up">
-    <img src="sero.png" alt="스크롤 이미지 1" class="fade-img" />
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">신청하기</a>
+<section style="padding: 32px 0; text-align: center;">
+  <img src="sero.png" alt="스크롤 이미지 1" style="max-width: 480px; width: 100%; border-radius: 10px; box-shadow: 0 10px 20px rgba(0,0,0,0.15); margin: 20px auto; display: block;" />
+  <a href="https://docs.google.com/forms/..." class="survey-btn">신청하기</a>
 </section>
 
   <footer>
