--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
       text-decoration: none;
     }
 
-.img-section {
+.main-section {
   padding: 32px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+}
+
+.main-img {
+  width: 100%;
+  max-width: 480px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  margin: 20px auto;
+  display: block;
 }
     .fade-img {
       width: 100%;
@@ -100,11 +106,11 @@
   </header>
 
   <!-- 이미지 섹션들 -->
-<section style="padding: 32px 0; text-align: center;">
-  <img src="sero.png" alt="스크롤 이미지 1" style="max-width: 480px; width: 100%; border-radius: 10px; box-shadow: 0 10px 20px rgba(0,0,0,0.15); margin: 20px auto; display: block;" />
+<section class="main-section">
+  <img src="sero.png" alt="스크롤 이미지 1" class="main-img" />
   <a href="https://docs.google.com/forms/..." class="survey-btn">신청하기</a>
 </section>
-
+  
   <footer>
     &copy; 2025 에브리디어<br>
     Contact: <a href="mailto:gwg03017@naver.com">gwg03017@naver.com</a>
