--- a/index.html
+++ b/index.html
@@ -29,17 +29,12 @@
       font-size: 16px;
     }
 
-    header {
-      background: var(--bg);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 16px;
-    }
-    .logo-img {
-      max-height: 80px;
-      width: auto;
-    }
+  header {
+  padding: 4px 12px;  /* 상하 여백 축소 */
+}
+.logo-img {
+  max-height: 60px;   /* 로고 크기도 살짝 줄이면 더 자연스러움 */
+}
     .instagram-link {
       font-size: 1.5rem;
       color: var(--text);
@@ -52,6 +47,7 @@
 }
 
 .main-img {
+    padding: 16px 0;  /* 상하 간격 32px → 16px로 축소 */
   width: 100%;
   max-width: 480px;
   border-radius: 10px;
