--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <!-- 이미지 섹션들 -->
 <section class="main-section">
   <img src="sero.png" alt="스크롤 이미지 1" class="main-img" />
-  <a href="https://docs.google.com/forms/..." class="survey-btn">신청하기</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">신청하기</a>
 </section>
   
   <footer>
