--- a/index.html
+++ b/index.html
@@ -64,23 +64,10 @@
       display: block; 
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
     }
-
-.survey-btn {
-  display: inline-block;
-  padding: 14px 32px;
-  background: var(--accent);
-  color: #fff;
-  border-radius: 50px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  text-decoration: none;
-  margin-top: 24px;  /* 이미지와 버튼 사이 여백 */
-  transition: background 0.3s;
+.btn-section {
+  text-align: center;
+  padding: 24px 0 48px;
 }
-    
-    .survey-btn:hover {
-      background: #333;
-    }
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -102,11 +89,15 @@
   </header>
 
   <!-- 이미지 섹션들 -->
-<section class="main-section">
-  <img src="sero.png" alt="스크롤 이미지 1" class="main-img" />
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">신청하기</a>
+<section class="main-section" data-aos="fade-up">
+  <img src="sero.png" alt="스크롤 이미지 1" class="fade-img" />
 </section>
-  
+
+<!-- 버튼 섹션 -->
+<section class="btn-section" data-aos="fade-up">
+  <a href="https://docs.google.com/forms/..." class="survey-btn">신청하기</a>
+</section>
+
   <footer>
     &copy; 2025 에브리디어<br>
     Contact: <a href="mailto:gwg03017@naver.com">gwg03017@naver.com</a>
