--- a/index.html
+++ b/index.html
@@ -95,9 +95,30 @@
 
 <!-- 버튼 섹션 -->
 <section class="btn-section" data-aos="fade-up">
-  <a href="https://docs.google.com/forms/..." class="survey-btn">신청하기</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">신청하기</a>
 </section>
-
+.survey-btn {
+  display: inline-block;
+  padding: 14px 32px;
+  background: var(--accent);
+  color: #fff;
+  border-radius: 50px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-decoration: none;
+  margin-top: 24px;  /* 이미지와 버튼 사이 여백 */
+  transition: background 0.3s;
+}
+    
+    .survey-btn:hover {
+      background: #333;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.85rem;
+      color: #777;
+      padding: 24px 16px;
+    }
   <footer>
     &copy; 2025 에브리디어<br>
     Contact: <a href="mailto:gwg03017@naver.com">gwg03017@naver.com</a>
