--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+  <!-- 🔹 Firebase SDK 추가 -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth.js"></script>
+
   <style>
     :root {
       --primary: #84BD93;
@@ -46,19 +51,19 @@
       text-decoration: none;
     }
 
-.main-section {
-  padding: 32px 0;
-  text-align: center;
-}
+    .main-section {
+      padding: 32px 0;
+      text-align: center;
+    }
 
-.main-img {
-  width: 100%;
-  max-width: 480px;
-  border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-  margin: 20px auto;
-  display: block;
-}
+    .main-img {
+      width: 100%;
+      max-width: 480px;
+      border-radius: 10px;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+      margin: 20px auto;
+      display: block;
+    }
     .fade-img {
       width: 100%;
       max-width: 480px;
@@ -69,22 +74,48 @@
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
     }
 
-.survey-btn {
-  display: inline-block;
-  padding: 14px 32px;
-  background: var(--accent);
-  color: #fff;
-  border-radius: 50px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  text-decoration: none;
-  margin-top: 24px;  /* 이미지와 버튼 사이 여백 */
-  transition: background 0.3s;
-}
-    
+    .survey-btn {
+      display: inline-block;
+      padding: 14px 32px;
+      background: var(--accent);
+      color: #fff;
+      border-radius: 50px;
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-decoration: none;
+      margin-top: 24px;
+      transition: background 0.3s;
+    }
     .survey-btn:hover {
       background: #333;
     }
+
+    .auth-form {
+      margin-top: 40px;
+      text-align: center;
+    }
+    .auth-form input {
+      padding: 10px;
+      margin: 8px;
+      width: 80%;
+      max-width: 300px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    .auth-form button {
+      margin: 8px;
+      padding: 10px 24px;
+      border: none;
+      background: var(--primary);
+      color: white;
+      font-weight: bold;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .auth-form button:hover {
+      background: var(--accent);
+    }
+
     footer {
       text-align: center;
       font-size: 0.85rem;
@@ -105,23 +136,77 @@
     </a>
   </header>
 
-  <!-- 이미지 섹션들 -->
-<section class="main-section">
-  <img src="sero.png" alt="스크롤 이미지 1" class="main-img" />
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">신청하기</a>
-</section>
+  <!-- 이미지 섹션 -->
+  <section class="main-section">
+    <img src="sero.png" alt="스크롤 이미지 1" class="main-img" />
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYpdKXeN2gXIkk8mLdQ3VJaJAiXR8XXYduqR9YEbuPMB5AUQ/viewform?usp=header" class="survey-btn">신청하기</a>
+    
+    <!-- 🔹 로그인/회원가입 폼 -->
+    <div class="auth-form">
+      <input type="email" id="email" placeholder="이메일" />
+      <br>
+      <input type="password" id="password" placeholder="비밀번호" />
+      <br>
+      <button onclick="signup()">회원가입</button>
+      <button onclick="login()">로그인</button>
+    </div>
+  </section>
   
   <footer>
     &copy; 2025 에브리디어<br>
     Contact: <a href="mailto:gwg03017@naver.com">gwg03017@naver.com</a>
   </footer>
 
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 800,
-      once: true
-    });
-  </script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init({ duration: 800, once: true });
+</script>
+
+<!-- 🔹 Firebase 모듈 스크립트 추가 -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-auth.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-analytics.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyB11dj3UDHShGps65QdDtEb5cTEKBuONLI",
+    authDomain: "everydear-1c552.firebaseapp.com",
+    projectId: "everydear-1c552",
+    storageBucket: "everydear-1c552.firebasestorage.app",
+    messagingSenderId: "875515718386",
+    appId: "1:875515718386:web:e1cea297b9a66588503e6b",
+    measurementId: "G-0129RHHMWV"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const auth = getAuth(app);
+
+  // 🔸 회원가입
+  window.signup = function() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+    createUserWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        alert("회원가입 성공!");
+      })
+      .catch((error) => {
+        alert("회원가입 오류: " + error.message);
+      });
+  }
+
+  // 🔸 로그인
+  window.login = function() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+    signInWithEmailAndPassword(auth, email, password)
+      .then((userCredential) => {
+        alert("로그인 성공!");
+      })
+      .catch((error) => {
+        alert("로그인 오류: " + error.message);
+      });
+  }
+</script>
 </body>
 </html>
