--- a/signup.html
+++ b/signup.html
@@ -36,6 +36,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-auth.js";
+    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.7.3/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyB11dj3UDHShGps65QdDtEb5cTEKBuONLI",
@@ -49,25 +50,43 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const db = getFirestore(app);
 
-    window.register = function () {
-      const email = document.getElementById("email").value;
+    window.register = async function () {
+      const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
       const confirm = document.getElementById("confirm").value;
+      const name = document.getElementById("name").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const birth = document.getElementById("birth").value.trim();
 
+      if (!email.includes("@")) {
+        alert("올바른 이메일을 입력하세요.");
+        return;
+      }
       if (password !== confirm) {
         alert("비밀번호가 일치하지 않습니다.");
         return;
       }
 
-      createUserWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          alert("회원가입 성공!");
-          window.location.href = "index.html";
-        })
-        .catch((error) => {
-          alert("오류: " + error.message);
+      try {
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+
+        // Firestore에 사용자 추가 정보 저장
+        await setDoc(doc(db, "users", user.uid), {
+          email,
+          name,
+          phone,
+          birth,
+          createdAt: new Date().toISOString()
         });
+
+        alert("회원가입이 완료되었습니다!");
+        window.location.href = "index.html";
+      } catch (error) {
+        alert("회원가입 오류: " + error.message);
+      }
     };
   </script>
 </body>
